Refactor code structure for improved readability and maintainability

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,10 +6,55 @@
 }
 
 @theme inline {
+  --font-inter: var(--font-inter);
+  --font-manrope: var(--font-manrope);
+  --font-anton: var(--font-anton);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --color-yellow-50: #fef5e7;
+  --color-yellow-100: #fef0da;
+  --color-yellow-200: #fce1b3;
+  --color-yellow-300: #f59e0b;
+  --color-yellow-400: #dd8e0a;
+  --color-yellow-500: #c47e09;
+  --color-yellow-600: #b87708;
+  --color-yellow-700: #935f07;
+  --color-yellow-800: #6e4705;
+  --color-yellow-900: #563704;
+
+  --color-surface-50: #f9fafb;   /* Base */
+  --color-surface-100: #f4f6f9;  /* Lighter */
+  --color-surface-200: #e9eff5;  /* Light */
+  --color-surface-300: #dbe2eb;  /* Normal */
+  --color-surface-400: #ccd6e1;  /* Darker */
+  --color-surface-500: #b3c4d6;  /* Dark */
+  --color-surface-600: #9aaab8;  /* Darker */
+  --color-surface-700: #7d8d9e;  /* Deeper */
+  --color-surface-800: #6a7a8d;  /* Deepest */
+  --color-surface-900: #4f5b6b;  /* Darkest */
+
+  --color-dark-50: #b2bbc6;   /* Lighter */
+  --color-dark-100: #a3adbb;  /* Light :hover */
+  --color-dark-200: #909dad;  /* Light :active */
+  --color-dark-300: #546881;  /* Normal */
+  --color-dark-400: #47586e;  /* Normal :hover */
+  --color-dark-500: #3d4c5e;  /* Normal :active */
+  --color-dark-600: #1d242d;  /* Dark */
+  --color-dark-700: #151a20;  /* Dark :hover */
+  --color-dark-800: #090b0e;  /* Dark :active */
+
+    --color-blue-50: #eff6ff;   /* Very light */
+  --color-blue-100: #dbeafe;  /* Extra light */
+  --color-blue-200: #bfdbfe;  /* Light */
+  --color-blue-300: #93c5fd;  /* Soft blue */
+  --color-blue-400: #60a5fa;  /* Mid-light */
+  --color-blue-500: #2563eb;  /* Base */
+  --color-blue-600: #1d4ed8;  /* Stronger */
+  --color-blue-700: #1e40af;  /* Dark */
+  --color-blue-800: #1e3a8a;  /* Darker */
+  --color-blue-900: #172554;  /* Deepest */
 }
 
 @media (prefers-color-scheme: dark) {
