Refactor toast component usage: remove unnecessary position prop and adjust toast styling in global CSS Enhance registration flow: streamline toast messages and remove timeout before navigation Add competition dialog: implement a dialog for starting competitions with player selection instructions Improve competition overview: update layout and integrate DataTable for race details

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,8 +17,16 @@
   @apply bg-surface-200 border-none p-0;
 }
 
+.p-toast {
+  @apply !top-[80px];
+}
+
 .p-datepicker-header {
   @apply bg-surface-200 rounded-lg p-2;
+}
+
+.p-datepicker span {
+  @apply !h-7 !w-7;
 }
 
 .p-datepicker-header button {
