Refactor competition pages and components for improved styling and structure
- Updated `SelectingPhase.tsx` to use utility classes for border styling.
- Simplified imports and removed unused state and effects in `homeLayout.tsx`.
- Enhanced layout and styling in `index.tsx` for competition details, including new container styles.
- Added container styles to various components for consistent design.
- Removed deprecated `ritten.tsx` file and replaced it with dynamic routing for stages and races.
- Created a new `ritten/[itemId].tsx` file to handle individual race and stage details.
- Implemented loading states and improved user experience in competition overview pages.
- Updated global styles to enhance the appearance of data tables and other components.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,7 +14,7 @@
 @import 'tailwindcss/utilities' layer(utilities);
 
 .p-datepicker {
-  @apply bg-surface-100 border-none p-0;
+  @apply bg-surface-100 border-[1px] p-4 border-surface-500;
 }
 
 .p-toast {
@@ -35,6 +35,10 @@
 
 .p-datepicker table td > span.p-highlight {
   @apply bg-primary-500 rounded-full text-surface-50;
+}
+
+.p-datatable {
+  @apply bg-surface-100 rounded-lg;
 }
 
 .p-datatable-header {
