--- a/styles/globals.css
+++ b/styles/globals.css
@@ -57,6 +57,26 @@
   @apply bg-surface-100 border-none;
 }
 
+.p-button:not(:disabled) {
+  @apply bg-primary-500 transition-all;
+}
+
+.p-button:not(:disabled):hover {
+  @apply bg-primary-600;
+}
+
+.p-button-secondary.p-button.p-button-outlined:not(:disabled) {
+  @apply border-[#64748b];
+}
+
+.p-button.p-button-outlined:not(:disabled) {
+  @apply bg-transparent border-primary-500;
+}
+
+.p-button.p-button-outlined:not(:disabled):hover {
+  @apply bg-surface-100;
+}
+
 @theme {
   --font-inter: var(--font-inter);
   --font-manrope: var(--font-manrope);
