--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,6 +17,10 @@ body {
   @apply text-on-surface;
 }
 
+.p-confirm-popup-footer {
+  @apply flex justify-end gap-2;
+}
+
 .p-tooltip {
   filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3))
     drop-shadow(0px 1px 3px rgba(0, 0, 0, 0.15));
