--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,6 +17,10 @@ body {
   @apply text-on-surface;
 }
 
+.p-dialog-footer {
+  @apply flex flex-row justify-end;
+}
+
 .p-confirm-popup-footer {
   @apply flex justify-end gap-2;
 }
