--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,6 +17,50 @@ body {
   @apply text-on-surface;
 }
 
+.p-datatable {
+  @apply bg-surface-container rounded-xl;
+}
+
+.p-datatable-header {
+  @apply bg-surface-container border-none;
+}
+
+.p-datatable-thead th {
+  @apply bg-surface-container border-none;
+}
+
+.p-datatable-tbody tr {
+  @apply bg-surface-container border-none;
+}
+
+.p-paginator {
+  @apply bg-surface-container border-none;
+}
+
+.p-toast {
+  @apply !top-[80px];
+}
+
+.p-datepicker {
+  @apply bg-surface-container border-none p-4 rounded-xl;
+}
+
+.p-datepicker-header {
+  @apply bg-surface-container rounded-xl p-2;
+}
+
+.p-datepicker span {
+  @apply !h-7 !w-7;
+}
+
+.p-datepicker-header button {
+  @apply text-black;
+}
+
+.p-datepicker table td > span.p-highlight {
+  @apply bg-primary rounded-full text-surface-bright;
+}
+
 .p-orderlist-list {
   @apply bg-surface-container border-none !rounded-xl gap-2 overflow-visible;
 }
@@ -45,87 +89,6 @@ body {
   @apply fill-primary;
 }
 
-.p-dialog-footer {
-  @apply flex flex-row justify-end;
-}
-
-.p-confirm-popup-footer {
-  @apply flex justify-end gap-2;
-}
-
-.p-tooltip {
-  filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3))
-    drop-shadow(0px 1px 3px rgba(0, 0, 0, 0.15));
-}
-
-.p-tooltip.p-tooltip-right .p-tooltip-arrow {
-  @apply border-r-inverse-surface;
-}
-
-.p-tooltip-text {
-  @apply bg-inverse-surface border-r-inverse-surface text-inverse-on-surface text-xs px-2 py-1;
-}
-
-.p-inputtext {
-  @apply rounded-xl font-semibold border-2;
-}
-
-.p-inputtext span {
-  @apply text-on-surface;
-}
-
-.p-inputtext:enabled {
-  @apply border-outline;
-}
-
-.p-inputtext:enabled:focus {
-  @apply border-outline shadow-[0_0_0_0.2rem_#d1e4ff];
-}
-
-.p-datepicker {
-  @apply bg-surface-container border-none p-4 rounded-xl;
-}
-
-.p-datepicker-header {
-  @apply bg-surface-container rounded-xl p-2;
-}
-
-.p-toast {
-  @apply !top-[80px];
-}
-
-.p-datepicker span {
-  @apply !h-7 !w-7;
-}
-
-.p-datepicker-header button {
-  @apply text-black;
-}
-
-.p-datepicker table td > span.p-highlight {
-  @apply bg-primary rounded-full text-surface-bright;
-}
-
-.p-datatable {
-  @apply bg-surface-container rounded-xl;
-}
-
-.p-datatable-header {
-  @apply bg-surface-container border-none;
-}
-
-.p-datatable-thead th {
-  @apply bg-surface-container border-none;
-}
-
-.p-datatable-tbody tr {
-  @apply bg-surface-container border-none;
-}
-
-.p-paginator {
-  @apply bg-surface-container border-none;
-}
-
 .p-button:disabled {
   @apply opacity-50 cursor-not-allowed;
 }
@@ -140,18 +103,6 @@ body {
 
 .p-button:not(:disabled).p-button-danger {
   @apply bg-error text-on-error border-2 border-error;
-}
-
-.p-button.p-button-outlined {
-  @apply border-2 border-primary text-primary bg-transparent;
-}
-
-.p-button.p-button-outlined.p-button-secondary {
-  @apply border-2 border-secondary text-secondary bg-transparent;
-}
-
-.p-button.p-button-outlined.p-button-danger {
-  @apply border-2 text-error bg-transparent border-error;
 }
 
 /* Base button styles */
@@ -218,6 +169,26 @@ body {
   @apply bg-on-error-container;
 }
 
+.p-button.p-button-outlined {
+  @apply border-2 border-primary text-primary bg-transparent;
+}
+
+.p-button.p-button-outlined.p-button-secondary {
+  @apply border-2 border-secondary text-secondary bg-transparent;
+}
+
+.p-button.p-button-outlined.p-button-danger {
+  @apply border-2 text-error bg-transparent border-error;
+}
+
+.p-multiselect-checkbox {
+  @apply flex items-center justify-center;
+}
+
+.p-datepicker table td.p-datepicker-today > span {
+  @apply bg-surface-container-low;
+}
+
 .p-treeselect-panel {
   width: 100% !important;
   max-width: 402px !important;
@@ -233,53 +204,53 @@ body {
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 
-  --color-primary: #35618e;
-  --color-surface-tint: #35618e;
+  --color-primary: #515b92;
+  --color-surface-tint: #515b92;
   --color-on-primary: #ffffff;
-  --color-primary-container: #d1e4ff;
-  --color-on-primary-container: #184975;
-  --color-secondary: #535f70;
+  --color-primary-container: #dee0ff;
+  --color-on-primary-container: #394379;
+  --color-secondary: #5b5d72;
   --color-on-secondary: #ffffff;
-  --color-secondary-container: #d6e3f7;
-  --color-on-secondary-container: #3b4858;
-  --color-tertiary: #6b5778;
+  --color-secondary-container: #e0e1f9;
+  --color-on-secondary-container: #434659;
+  --color-tertiary: #77536d;
   --color-on-tertiary: #ffffff;
-  --color-tertiary-container: #f2daff;
-  --color-on-tertiary-container: #523f5f;
+  --color-tertiary-container: #ffd7f1;
+  --color-on-tertiary-container: #5d3c55;
   --color-error: #ba1a1a;
   --color-on-error: #ffffff;
   --color-error-container: #ffdad6;
   --color-on-error-container: #93000a;
-  --color-background: #f8f9ff;
-  --color-on-background: #191c20;
-  --color-surface: #f8f9ff;
-  --color-on-surface: #191c20;
-  --color-surface-variant: #dfe2eb;
-  --color-on-surface-variant: #42474e;
-  --color-outline: #73777f;
-  --color-outline-variant: #c3c7cf;
+  --color-background: #fbf8ff;
+  --color-on-background: #1b1b21;
+  --color-surface: #fbf8ff;
+  --color-on-surface: #1b1b21;
+  --color-surface-variant: #e3e1ec;
+  --color-on-surface-variant: #46464f;
+  --color-outline: #767680;
+  --color-outline-variant: #c7c5d0;
   --color-shadow: #000000;
   --color-scrim: #000000;
-  --color-inverse-surface: #2e3135;
-  --color-inverse-on-surface: #eff0f7;
-  --color-inverse-primary: #a0cafd;
-  --color-primary-fixed: #d1e4ff;
-  --color-on-primary-fixed: #001d36;
-  --color-primary-fixed-dim: #a0cafd;
-  --color-on-primary-fixed-variant: #184975;
-  --color-secondary-fixed: #d6e3f7;
-  --color-on-secondary-fixed: #101c2b;
-  --color-secondary-fixed-dim: #bac8db;
-  --color-on-secondary-fixed-variant: #3b4858;
-  --color-tertiary-fixed: #f2daff;
-  --color-on-tertiary-fixed: #251432;
-  --color-tertiary-fixed-dim: #d6bee5;
-  --color-on-tertiary-fixed-variant: #523f5f;
-  --color-surface-dim: #d8dae0;
-  --color-surface-bright: #f8f9ff;
+  --color-inverse-surface: #303036;
+  --color-inverse-on-surface: #f2eff7;
+  --color-inverse-primary: #bac3ff;
+  --color-primary-fixed: #dee0ff;
+  --color-on-primary-fixed: #0b154b;
+  --color-primary-fixed-dim: #bac3ff;
+  --color-on-primary-fixed-variant: #394379;
+  --color-secondary-fixed: #e0e1f9;
+  --color-on-secondary-fixed: #181a2c;
+  --color-secondary-fixed-dim: #c3c5dd;
+  --color-on-secondary-fixed-variant: #434659;
+  --color-tertiary-fixed: #ffd7f1;
+  --color-on-tertiary-fixed: #2d1228;
+  --color-tertiary-fixed-dim: #e6bad7;
+  --color-on-tertiary-fixed-variant: #5d3c55;
+  --color-surface-dim: #dbd9e0;
+  --color-surface-bright: #fbf8ff;
   --color-surface-container-lowest: #ffffff;
-  --color-surface-container-low: #f2f3f9;
-  --color-surface-container: #eceef4;
-  --color-surface-container-high: #e6e8ee;
-  --color-surface-container-highest: #e1e2e8;
+  --color-surface-container-low: #f5f2fa;
+  --color-surface-container: #efedf4;
+  --color-surface-container-high: #e9e7ef;
+  --color-surface-container-highest: #e4e1e9;
 }
