--- a/styles/globals.css
+++ b/styles/globals.css
@@ -186,7 +186,11 @@ body {
 }
 
 .p-datepicker table td.p-datepicker-today > span {
-  @apply bg-surface-container-low;
+  @apply bg-none;
+}
+
+.p-confirm-popup-footer {
+  @apply flex justify-end gap-2;
 }
 
 .p-treeselect-panel {
